@@ -16,6 +16,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 - Method AbstractHttpData->validate()
 
+### Changed
+
+- Method AbstractHttpData->get() trims now whitespaces
+
 ## 0.0.3
 
 ### Removed
